--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.2.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -42,7 +43,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "postcss": "^8.4.21"
   }
 }
